--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,54 @@
     color: black;
     text-decoration: none;
 }
+.ctn-front{
+    background-image: url('./assets/kara-eads-buhmhprfo3g-unsplash.jpg');
+    font-family: 'Noto Sans JP', sans-serif;
+    height: 80vh;
+    width: auto;
+}
+.front-text{
+    font-family: 'Raleway', sans-serif;
+    padding-top: 8vh;
+    padding-left: 10vh;
+}
+.form-btn{
+    padding-left: 10vh;
+}
+#btn-primary{
+    font-weight: 600;
+    border: 2px solid;
+    border-radius: 75px;
+    padding: 18px;
+}
+#btn-secondary{
+    background-color: #232b2b;
+    color: #d0d0d0;
+    font-weight: 600;
+    border-radius: 75px;
+    padding: 18px;
+}
+#front-title{
+    font-weight: 900;
+    padding-top: 1em;
+}
+#front-sub{
+    font-weight: 400;
+    padding-top: 1em;
+}
+#front-desc{
+    font-weight: 200;
+    padding-top: 1em;
+}
+.ctn-card{
+    padding-top: 4em;
+}
+#front-card{
+    border: 0px solid;
+}
+.ctn-mid{
+    background-image: url('./assets/annie-spratt-hX_hf2lPpUU-unsplash.jpg');
+    font-family: 'Noto Sans JP', sans-serif;
+    height: 60vh;
+    width: auto;
+}
